# JesusVM

./: .gitignore  CMakeLists.txt  JesusVM.sln  LICENSE.txt  todo.txt
JesusVM/: CMakeLists.txt  JesusVM.vcxproj  JesusVM.vcxproj.filters  constpool.c  constpool.h  debug.c  debug.h  function.c  io.c  io.h  main.c  opcodes.h  stack.c  stack.h  type.c  type.h  util.c  vm.c
JesusVM/include/: constpool.h  executor.h  function.h  module.h  opcodes.h  pch.h  stack.h  type.h  vm.h
JesusVM/include/object/: class.h  field.h  method.h  object.h
JesusVM/include/object/heap/: heap.h  heap_functions.h  rb.h
JesusVM/include/os/: init.h  memory.h
JesusVM/include/template/: vector.h
JesusVM/include/util/: arrayutil.h  io.h  string.h  util.h
JesusVM/src/: constpool.c  debug.c  executor.c  function.c  main.c  module.c  stack.c  type.c  vm.c
JesusVM/src/object/: class.c  field.c  method.c  object.c
JesusVM/src/object/heap/: heap.c  rb.c
JesusVM/src/os/windows/: init.c  memory.c
JesusVM/src/template/: vector.c
JesusVM/src/util/: arrayutil.c  io.c  string.c  util.c
framework/: CMakeLists.txt
framework/include/: types.h
framework/include/JesusVM/: Function.h  GlobalVar.h  JesusVM.h  Linker.h  Module.h  Options.h  Preload-Classes.h  Preload-Fields.h  Preload-Functions.h  Preload-Modules.h  Preload.h  Stack.h
framework/include/JesusVM/bytecode/: Executor.h  Opcodes.h
framework/include/JesusVM/bytecode/handlers/: BaseHandler.h
framework/include/JesusVM/concurrency/: Future.h  Promise.h  Scheduler.h  Task.h
framework/include/JesusVM/constpool/: ConstPool.h  Constant.h  ConstantAscii.h  ConstantClass.h  ConstantField.h  ConstantFunc.h  ConstantGlobalVar.h  ConstantMethod.h  ConstantModule.h  ConstantName.h
framework/include/JesusVM/executors/: Daemon.h  Executor.h  Thread.h  Threading.h  VThread.h
framework/include/JesusVM/heap/: Class.h  Field.h  Method.h  Object.h
framework/include/JesusVM/heap/gc/: CycleCollector.h  GC-Daemon.h  References.h
framework/include/JesusVM/native_interface/: ProvidedFunctions.h
framework/include/JesusVM/platform/: Memory.h  NativePlugin.h
framework/include/JesusVM/preload/: Preload-Classes.h  Preload-Fields.h  Preload-Functions.h  Preload-Modules.h
framework/include/JesusVM/runtime/std/: Arrays.h  Primitives.h
framework/include/JesusVM/runtime/vm/: System.h
framework/include/JesusVM/type/: FunctionType.h  PrimitiveType.h  ReferenceType.h  Type.h  TypeSystem.h  VoidType.h
framework/include/JesusVM/util/: HandleRegistry.h  Logging.h  Profiler.h  StringPool.h
framework/src/: Function.cpp  GlobalVar.cpp  JesusVM.cpp  Linker.cpp  Module.cpp  Preload.cpp  Stack.cpp
framework/src/bytecode/: Executor.cpp
framework/src/bytecode/handlers/: BaseHandler.cpp
framework/src/concurrency/: Future.cpp  Promise.cpp
framework/src/constpool/: ConstPool.cpp  Constant.cpp  ConstantAscii.cpp  ConstantClass.cpp  ConstantField.cpp  ConstantFunc.cpp  ConstantGlobalVar.cpp  ConstantMethod.cpp  ConstantModule.cpp  ConstantName.cpp
framework/src/executors/: Daemon.cpp  Executor.cpp  Thread.cpp  Threading.cpp  VThread.cpp
framework/src/heap/: Class.cpp  Field.cpp  Method.cpp  Object.cpp
framework/src/heap/gc/: CycleCollector.cpp  GC-Daemon.cpp  References.cpp
framework/src/native_interface/: ProvidedFunctions.cpp
framework/src/platform/: Memory.cpp  NativePlugin.cpp
framework/src/runtime/std/: Arrays.cpp  Primitives.cpp
framework/src/runtime/vm/: System.cpp
framework/src/type/: FunctionType.cpp  PrimitiveType.cpp  ReferenceType.cpp  Type.cpp  TypeSystem.cpp  VoidType.cpp
framework/src/util/: HandleRegistry.cpp  Profiler.cpp  StringPool.cpp
lib/dyncall/: CMakeLists.txt
lib/dyncall/buildsys/cmake/Modules/: UseLATEX.cmake
lib/dyncall/dyncall/: CMakeLists.txt
lib/dyncall/dyncallback/: CMakeLists.txt
lib/dyncall/test/: CMakeLists.txt
main/: CMakeLists.txt
main/src/: main.cpp
moduleweb/: CMakeLists.txt
moduleweb/include/moduleweb/: attribute_info.h  class_info.h  code_attribute.h  constant_info.h  error.h  field_info.h  function_info.h  global_var_info.h  method_info.h  module_info.h  reader.h  section_info.h  stackmap_attribute.h  stream.h  string_pool_info.h  types.h  writer.h
moduleweb/include/moduleweb/builder/: attribute_builder.h  class_builder.h  field_builder.h  function_builder.h  global_var_builder.h  insn_builder.h  method_builder.h  module_builder.h  opcodes.h
moduleweb/include/moduleweb/platform/: files.h
moduleweb/src/: attribute_info.c  class_info.c  code_attribute.c  constant_info.c  error.c  field_info.c  function_info.c  global_var_info.c  method_info.c  module_info.c  reader.c  stackmap_attribute.c  stream.c  writer.c
moduleweb/src/builder/: attribute_builder.c  class_builder.c  field_builder.c  function_builder.c  global_var_builder.c  insn_builder.c  method_builder.c  module_builder.c
moduleweb/src/platform/: files.c
native/: CMakeLists.txt
native-test/: CMakeLists.txt
native-test/include/: Main.h
native-test/src/: Main.cpp
native/include/JesusVM/: JesusNative.h  JesusNative_platform.h
native/include/JesusVM/win32/: JesusNative_platform.h
run/: Main.jmod
run/std/: IO.jmod  Primitives.jmod
run/vm/: System.jmod
